# label_studio_tools

./: .env.example  .gitignore  README.md  pyproject.toml
label_studio_tools/: azure_blob_storage.py  config.py  main.py  utils.py
